# Stockfish

./: .gitignore  CMakeLists.txt  build_release_exe.bat  build_release_lib.bat
automation/: automation.py  build.bat
src/: engine.cpp  uci.cpp  uci.h
